# inertia-algebra

./: Cargo.toml  README.md
examples/: vectors.rs  wrapping.rs
src/: lib.rs  operator.rs  ops.rs  properties.rs  structures.rs  wrapper.rs
src/properties/: grouplike.rs  ringlike.rs
src/structures/: grouplike.rs  ringlike.rs  specialized.rs  withops.rs
src/structures/specialized/: grouplike.rs  mat.rs  poly.rs  ringlike.rs
src/structures/withops/: ringlike.rs
tests/: wrapping.rs
