[package]
name = "inertia-algebra"
version = "0.1.0"
authors = ["Brendan Zabarauskas", "Darin Morrison", "Sébastien Crozet", "Wadelma <delma@del.ma>", "William Youmans"]
description = "Abstract algebra for Rust."
keywords = ["algebra", "monoids", "math"]
categories = ["Science"]
readme = "README.md"
repository = "https://github.com/wjyoumans/inertia-algebra"
license = "Apache-2.0"
edition = "2021"


[features]
default = ["std", "structures"]
std = []
structures = []

[dependencies]
approx      = { version = "0.3", default-features = false }

[dev-dependencies]
quickcheck  = "0.9"
